# aperture

./: .gitignore  BEDTIME_BREAKTHROUGH_SCOPE.md  CLAUDE-APERTURE.md  CLAUDE-NUDJ.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAINTENANCE.md  FRONTIER_MODES_IMPLEMENTATION.md  FRONTIER_MODES_POLYMATH_INTEGRATION.md  FRONTIER_MODES_START_HERE.md  NAVIGATION.md  NEXT_SESSION.md  OVERNIGHT_REFACTOR_SUMMARY.md  PROJECT_TEMPLATE.md  README.md  START_HERE.md  WORKFLOW_PLAN.md  vercel.json
.claude/: pre-push-build-check.sh  settings.json  startup.md  ux-persona-review-state.json
.github/: PULL_REQUEST_TEMPLATE.md
.process/: ARCHITECTURE.md  BACKGROUND_PROCESSES.md  CAPABILITIES.md  COMMON_MISTAKES.md  CONTINUOUS_IMPROVEMENT.md  DEBUGGING_CHECKLIST.md  DECISION_LOG.md  DEPLOYMENT.md  DEVELOPMENT.md  LESSONS_LEARNED.md  META_DEBUGGING_PROTOCOL.md  OBSERVABILITY.md  PROACTIVE_LOG_MONITORING.md  QUICK_REFERENCE.md  SESSION_CHECKLIST.md  TESTING_GUIDE.md
.scripts/: commit-msg  pre-commit  query-logs.sh
Aperture/: .env.temp  (+26 more)
projects/idea-engine/: QUICKSTART.md  README.md  SETUP.md  VARIABLES_NEEDED.md  pyproject.toml
projects/idea-engine/config/: seed-ideas.json
projects/idea-engine/src/lib/: deduplication.js  domain-sampler.js  domain-sampler.ts  feedback-summarizer.js  frontier-advancement.js  gemini-client.js  gemini-client.ts  mode-selector.js  mode-selector.ts  supabase.js  supabase.ts  types.js  types.ts
projects/idea-engine/src/pages/: IdeasPage.tsx
projects/idea-engine/supabase/migrations/: 20260402000001_create_idea_engine_schema.sql
(+1805 files in other folders)
