[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-engine"
version = "0.1.0"
description = "Evolutionary ideation engine with Gemini agents and Opus review"
requires-python = ">=3.11"

dependencies = [
    "google-generativeai>=0.8.0",
    "anthropic>=0.28.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "qdrant-client>=2.7.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]
